force-app/main/default/objects/Leave_Request__c/fields/Leave_Number__c.field-meta.xml
<CustomField>
    <fullName>Leave_Number__c</fullName>
    <displayFormat>LV-{00000}</displayFormat>
    <label>Leave Number</label>
    <type>AutoNumber</type>
</CustomField>