force-app/main/default/objects/Leave_Request__c/validationRules/Start_Date_Bigger_Than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Bigger_Than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date Has To Be Bigger Than Start Date</errorMessage>
</ValidationRule>