force-app/main/default/objects/Leave_Request__c/listViews/Requests.listView-meta.xml
<ListView>
    <fullName>Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted – Awaiting Approval</value>
    </filters>
    <label>Requests</label>
</ListView>